added font awesome icons

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Ethiopic:wght@800&family=Open+Sans&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Ethiopic:wght@800&family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/82b8e9f002.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -31,13 +31,14 @@
                 <h3 class="banner-subtitle">Hi, I am</h3>
                 <h1 class="banner-title">Md Hridoy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary1">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary1"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img src="images/hardy.png" alt="">
         </div>
     </header>
     <main>
+        <!-- About Me Section -->
         <section class="about">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
@@ -139,7 +140,7 @@
                 </div>
             </div>
             <div class="resume-button">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
         <!-- Contact Section -->
@@ -168,9 +169,5 @@
             </div>
         </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
-
 </html>
